@@ -6,3 +6,4 @@ void TrashSound();
 void win_SoundSetScale(int scale);
 void win_SoundWriteData(int32 *buffer, int count);
 void win_Throttle();
+extern bool muteTurbo;
